<?xml version="1.0"?>
<package format="2">
  <name>planner_agent</name>
  <version>0.0.0</version>
  <description>The planner_agent package</description>

  <maintainer email="rnwei0.0@gmail.com">mengwei</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/mengwei1/WEI_MENG_20201220</url>

  <author email="rnwei0.0@gmail.com">mengwei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
	
  <export>
  </export>
</package>
